# inventree-shopify

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  ShopifyIntegration.py  __init__.py  admin.py  models.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: action.yaml  plugin_test.yaml  plugin_test.yml  pypi.yaml
migrations/: 0001_initial.py  0002_inventorylevel.py  0002_shopifywebhook.py  0003_auto_20211006_1249.py  0003_shopifywebhook_shopify_webhook_id.py  0004_auto_20211019_2321.py
src/: ShopifyIntegration.py  models.py
src/ShopifyIntegrationPlugin/: ShopifyIntegration.py  __init__.py  models.py  version.yml
src/ShopifyIntegrationPlugin/migrations/: 0003_shopifywebhook_shopify_webhook_id.py
src/inventree-shopify/: ShopifyPlugin.py
src/inventree-shopify-plugin/: admin.py  models.py
src/inventree-shopify-plugin/migrations/: 0004_auto_20211019_2321.py
src/inventree-shopify-plugin/templates/shopify/: increase.html
src/inventree-shopify/migrations/: 0001_initial.py
src/inventree_shopify/: ShopifyPlugin.py  __init__.py  admin.py  models.py
src/inventree_shopify/migrations/: 0001_initial.py  0002_shopifywebhook.py
src/inventree_shopify/templates/shopify/: increase.html  index.html  webhooks.html
templates/shopify/: increase.html  index.html  webhooks.html
